force-app/main/default/objects/Queued_Email_Message__c/Queued_Email_Message__c.object-meta.xml
<CustomObject>
    <description>Queued unmtached email messages</description>
    <label>e2a Unmatched Email</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>e2a Unmatched Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>