force-app/main/default/objects/Queued_Email_Message__c/fields/Bcc_Address__c.field-meta.xml
<CustomField>
    <fullName>Bcc_Address__c</fullName>
    <description>Bcc addresses</description>
    <label>Bcc Address</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>