force-app/main/default/objects/Queued_Email_Message__c/fields/Cc_Address__c.field-meta.xml
<CustomField>
    <fullName>Cc_Address__c</fullName>
    <description>Cc addresses</description>
    <label>Cc Address</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>