force-app/main/default/objects/Queued_Email_Message__c/fields/Email_Services_Function__c.field-meta.xml
<CustomField>
    <fullName>Email_Services_Function__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Email services function id</description>
    <label>Email Rule</label>
    <referenceTo>Email_Services_Function__c</referenceTo>
    <relationshipLabel>e2a Unmatched Emails</relationshipLabel>
    <relationshipName>Queued_Emails</relationshipName>
    <type>Lookup</type>
</CustomField>