force-app/main/default/objects/Queued_Email_Message__c/fields/From_Name__c.field-meta.xml
<CustomField>
    <fullName>From_Name__c</fullName>
    <description>From name</description>
    <label>From Name</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>