force-app/main/default/objects/Queued_Email_Message__c/fields/Headers__c.field-meta.xml
<CustomField>
    <fullName>Headers__c</fullName>
    <description>Internet message headers of incoming email</description>
    <label>Headers</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>