force-app/main/default/objects/Queued_Email_Message__c/fields/Incoming__c.field-meta.xml
<CustomField>
    <fullName>Incoming__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Email was received</description>
    <label>Incoming</label>
    <type>Checkbox</type>
</CustomField>