force-app/main/default/objects/Queued_Email_Message__c/fields/Message_Date__c.field-meta.xml
<CustomField>
    <fullName>Message_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Message date</description>
    <label>Message Date</label>
    <type>DateTime</type>
</CustomField>