force-app/main/default/objects/Queued_Email_Message__c/fields/New_From_Address__c.field-meta.xml
<CustomField>
    <fullName>New_From_Address__c</fullName>
    <label>New From Address</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>