force-app/main/default/objects/Queued_Email_Message__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Reason for being queued</description>
    <label>Reason Not Matched</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unmatched Thread ID, Insert Not Allowed</fullName>
            </value>
            <value>
                <fullName>Insert Not Allowed</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Email Services Configuration Not Found</fullName>
            </value>
            <value>
                <fullName>Email Services Configuration Incomplete</fullName>
            </value>
            <value>
                <fullName>Matched Thread ID But No Custom Email Storage Object Defined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>