force-app/main/default/objects/Queued_Email_Message__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>Email subject</description>
    <label>Subject</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>