force-app/main/default/objects/Queued_Email_Message__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>From_Address__c</columns>
    <columns>Message_Date__c</columns>
    <columns>Email_Services_Function__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>