force-app/main/default/objects/Queued_Email_Message__c/listViews/e2a_Unmatched_Emails_Queued_Email_Message.listView-meta.xml
<ListView>
    <fullName>e2a_Unmatched_Emails_Queued_Email_Message</fullName>
    <filterScope>Queue</filterScope>
    <label>e2a Unmatched Emails</label>
    <queue>e2a_Unmatched_Emails</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>