force-app/main/default/objects/Queued_Email_Message__c/listViews/XXQueue0_Queued_Email_Message.listView-meta.xml
<ListView>
    <fullName>XXQueue0_Queued_Email_Message</fullName>
    <filterScope>Queue</filterScope>
    <label>XXQueue0</label>
    <queue>XXQueue0</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>