force-app/main/default/objects/Queued_Email_Message__c/listViews/XXQueue1001_Queued_Email_Message.listView-meta.xml
<ListView>
    <fullName>XXQueue1001_Queued_Email_Message</fullName>
    <filterScope>Queue</filterScope>
    <label>XXQueue1001</label>
    <queue>XXQueue1001</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>