force-app/main/default/objects/Queued_Email_Message__c/listViews/XXQueue100_Queued_Email_Message.listView-meta.xml
<ListView>
    <fullName>XXQueue100_Queued_Email_Message</fullName>
    <filterScope>Queue</filterScope>
    <label>XXQueue100</label>
    <queue>XXQueue100</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>