force-app/main/default/objects/Queued_Email_Message__c/listViews/XXQueue101_Queued_Email_Message.listView-meta.xml
<ListView>
    <fullName>XXQueue101_Queued_Email_Message</fullName>
    <filterScope>Queue</filterScope>
    <label>XXQueue101</label>
    <queue>XXQueue101</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>