force-app/main/default/objects/Queued_Email_Message__c/listViews/XXQueue102_Queued_Email_Message.listView-meta.xml
<ListView>
    <fullName>XXQueue102_Queued_Email_Message</fullName>
    <filterScope>Queue</filterScope>
    <label>XXQueue102</label>
    <queue>XXQueue102</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>