force-app/main/default/objects/Queued_Email_Message__c/listViews/XXQueue103_Queued_Email_Message.listView-meta.xml
<ListView>
    <fullName>XXQueue103_Queued_Email_Message</fullName>
    <filterScope>Queue</filterScope>
    <label>XXQueue103</label>
    <queue>XXQueue103</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>