force-app/main/default/objects/Queued_Email_Message__c/listViews/XXQueue104_Queued_Email_Message.listView-meta.xml
<ListView>
    <fullName>XXQueue104_Queued_Email_Message</fullName>
    <filterScope>Queue</filterScope>
    <label>XXQueue104</label>
    <queue>XXQueue104</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>