force-app/main/default/objects/Queued_Email_Message__c/listViews/XXQueue105_Queued_Email_Message.listView-meta.xml
<ListView>
    <fullName>XXQueue105_Queued_Email_Message</fullName>
    <filterScope>Queue</filterScope>
    <label>XXQueue105</label>
    <queue>XXQueue105</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>