force-app/main/default/objects/Queued_Email_Message__c/listViews/XXQueue106_Queued_Email_Message.listView-meta.xml
<ListView>
    <fullName>XXQueue106_Queued_Email_Message</fullName>
    <filterScope>Queue</filterScope>
    <label>XXQueue106</label>
    <queue>XXQueue106</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>