force-app/main/default/objects/Queued_Email_Message__c/listViews/XXQueue107_Queued_Email_Message.listView-meta.xml
<ListView>
    <fullName>XXQueue107_Queued_Email_Message</fullName>
    <filterScope>Queue</filterScope>
    <label>XXQueue107</label>
    <queue>XXQueue107</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>