force-app/main/default/objects/Queued_Email_Message__c/listViews/XXQueue108_Queued_Email_Message.listView-meta.xml
<ListView>
    <fullName>XXQueue108_Queued_Email_Message</fullName>
    <filterScope>Queue</filterScope>
    <label>XXQueue108</label>
    <queue>XXQueue108</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>