force-app/main/default/objects/Queued_Email_Message__c/listViews/XXQueue109_Queued_Email_Message.listView-meta.xml
<ListView>
    <fullName>XXQueue109_Queued_Email_Message</fullName>
    <filterScope>Queue</filterScope>
    <label>XXQueue109</label>
    <queue>XXQueue109</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>